[package]
name = "elfcat"
version = "0.1.7"
description = "ELF visualizer. Generates HTML files from ELF binaries."
authors = ["Ruslan Akbashev <ruslashev@gmail.com>"]
edition = "2018"
repository = "https://github.com/ruslashev/elfcat"
license = "Zlib"
readme = "readme.md"

[dependencies]
elfcat_derive = { path = "elfcat_derive" }
